sembada coal website

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@ ddsmoothmenu.init({
 </h4> 
            <img src="images/button/button2.png"/>
           <h4 class ="img_border img_border_b">
-            <img src="images/button/visi.png" />
+            <img src="images/button/Visi.png" />
             <p> Menjadi perusahaan  yang memberikan  layanan sesuai dengan harapan konsumen, dengan fokus pada pengadaan bahan bakar batubara berkualitas dan efisien</p>
             <img src="images/button/Misi.png" />
             <p>Memaksimalkan, mengimplementasikan  dan memberikan layanan kualitas tinggi  secara khusus sistem penghematan bahan bakar dengan  teknologi yang sesuai  dan jasa konsultasi  sesuai keperluan perusahaan. Dengan pengalaman perusahaan, kami menawarkan  produk dan layanan  yang sesuai dengan kebutuhan  dan harga yang kompetitif.</p>
