try compres monitor
11-mei

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ span.skype_c2c_container {
       <ul id="nav" class="nav navbar-nav pull-right l_tinynav1">
         <li class="active"><a href="index.html">Home</a></li>
         <li class=""><a href="about.html">About Us </a></li>
-         <li class=""><a href="product.htm">Product & Service </a></li>
+         <li class=""><a href="product.html">Product & Service </a></li>
          <li class=""><a href="customer.html">Our Customer </a></li>
          <li class=""><a href="contactus.html">Contact Us  </a></li>
                      
